--- a/Xenon/Xenon.csproj
+++ b/Xenon/Xenon.csproj
@@ -119,6 +119,10 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="1.1.2" />
     <PackageReference Include="CoreHtmlToImage" Version="1.0.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.3" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.18.1" />
     <PackageReference Include="SixLabors.Fonts" Version="2.0.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
