hot-fix IP runtime bugs. WIP preset designer

--- a/CCUPresetDesigner/CCUPresetDesigner.csproj
+++ b/CCUPresetDesigner/CCUPresetDesigner.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CCUI-UI\CCUI-Controls.csproj" />
+    <ProjectReference Include="..\Xenon\Xenon.csproj" />
+  </ItemGroup>
+
 </Project>
