--- a/BlobData/seasons.json
+++ b/BlobData/seasons.json
@@ -257,5 +257,33 @@
             "Xenon.Titles@text-alt": "#298f45",
             "Xenon.Creeds@color-main": "#298f45"
         }
+    },
+    {
+        "start": "2023-10-27",
+        "note": "reformation",
+        "macros": {
+            "color-main": "\"#ff92162b\"",
+            "text-alt": "\"#ff92162b\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#92162b",
+            "Xenon.Titles@color-main": "#92162b",
+            "Xenon.Titles@text-alt": "#92162b",
+            "Xenon.Creeds@color-main": "#92162b"
+        }
+    },
+    {
+        "start": "2024-10-28",
+        "note": "pentecost",
+        "macros": {
+            "color-main": "\"#ff298f45\"",
+            "text-alt": "\"#ff298f45\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#298f45",
+            "Xenon.Titles@color-main": "#298f45",
+            "Xenon.Titles@text-alt": "#298f45",
+            "Xenon.Creeds@color-main": "#298f45"
+        }
     }
 ]
