--- a/BlobData/seasons.json
+++ b/BlobData/seasons.json
@@ -375,5 +375,52 @@
             "Xenon.Titles@text-alt": "#452351",
             "Xenon.Creeds@color-main": "#452351"
         }
+    },
+    {
+        "start": "2025-04-18",
+        "note": "good-friday",
+        "macros": {
+            "color-main": "\"#ff141417\"",
+            "text-alt": "\"#ff373737\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#141417",
+            "Xenon.Titles@color-main": "#141417",
+            "Xenon.Titles@text-alt": "#373737",
+            "Xenon.Creeds@color-main": "#141417"
+        }
+    },
+    {
+        "start": "2025-04-20",
+        "note": "easter",
+        "macros": {
+            "color-main": "\"#ffffebaf\"",
+            "color-sub": "\"#fff9ceee\"",
+            "text-main": "\"#ff474747\"",
+            "text-alt": "\"#fff9ceee\"",
+            "text-sub": "\"#ff474747\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#ffebaf",
+            "Xenon.Titles@color-main": "#ffebaf",
+            "Xenon.Titles@text-alt": "#ffebaf",
+            "Xenon.Titles@text-main": "#474747",
+            "Xenon.Creeds@color-main": "#ffebaf",
+            "Xenon.Creeds@text-main": "#474747"
+        }
+    },
+    {
+        "start": "2025-06-08",
+        "note": "pentecost",
+        "macros": {
+            "color-main": "\"#ff298f45\"",
+            "text-alt": "\"#ff298f45\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#298f45",
+            "Xenon.Titles@color-main": "#298f45",
+            "Xenon.Titles@text-alt": "#298f45",
+            "Xenon.Creeds@color-main": "#298f45"
+        }
     }
 ]
