--- a/SlideCreater/SlideCreater.csproj
+++ b/SlideCreater/SlideCreater.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows7.0</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon2.ico</ApplicationIcon>
     <!--<IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>-->
@@ -86,6 +86,7 @@
     <ProjectReference Include="..\CCUPresetDesigner\CCUPresetDesigner.csproj" />
     <ProjectReference Include="..\CommonGraphics\CommonGraphics.csproj" />
     <ProjectReference Include="..\CommonVersionInfo\CommonVersionInfo.csproj" />
+    <ProjectReference Include="..\DeepSixGUI\DeepSixGUI.csproj" />
     <ProjectReference Include="..\LutheRun\LutheRun.csproj" />
     <ProjectReference Include="..\UIControls\UIControls.csproj" />
     <ProjectReference Include="..\Xenon\Xenon.csproj" />
