--- a/BlobData/seasons.json
+++ b/BlobData/seasons.json
@@ -422,5 +422,65 @@
             "Xenon.Titles@text-alt": "#298f45",
             "Xenon.Creeds@color-main": "#298f45"
         }
+    },
+
+        {
+        "start": "2025-10-26",
+        "note": "reformation",
+        "macros": {
+            "color-main": "\"#ff92162b\"",
+            "text-alt": "\"#ff92162b\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#92162b",
+            "Xenon.Titles@color-main": "#92162b",
+            "Xenon.Titles@text-alt": "#92162b",
+            "Xenon.Creeds@color-main": "#92162b"
+        }
+    },
+    {
+        "start": "2025-11-02",
+        "note": "all saints day",
+        "macros": {
+            "color-main": "\"#ffffebaf\"",
+            "text-alt": "\"#ffffebaf\"",
+            "text-main": "\"#ff474747\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#ffebaf",
+            "Xenon.Titles@color-main": "#ffebaf",
+            "Xenon.Titles@text-alt": "#ffebaf",
+            "Xenon.Titles@text-main": "#474747",
+            "Xenon.Creeds@color-main": "#ffebaf",
+            "Xenon.Creeds@text-main": "#474747"
+        }
+    },
+    {
+        "start": "2025-11-04",
+        "note": "pentecost",
+        "macros": {
+            "color-main": "\"#ff298f45\"",
+            "text-alt": "\"#ff298f45\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#298f45",
+            "Xenon.Titles@color-main": "#298f45",
+            "Xenon.Titles@text-alt": "#298f45",
+            "Xenon.Creeds@color-main": "#298f45"
+        }
+    },
+    {
+        "start": "2025-11-30",
+        "note": "advent",
+        "macros": {
+            "color-main": "\"#ff0b248f\"",
+            "text-alt": "\"#ff0b248f\""
+        },
+        "extras": {
+            "Xenon.Anthems@color-main": "#0b248f",
+            "Xenon.Titles@color-main": "#0b248f",
+            "Xenon.Titles@text-alt": "#0b248f",
+            "Xenon.Creeds@color-main": "#0b248f"
+        }
     }
 ]
