--- a/IntegratedPresenter/IntegratedPresenter.csproj
+++ b/IntegratedPresenter/IntegratedPresenter.csproj
@@ -236,9 +236,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="log4net" Version="3.0.0" />
-		<PackageReference Include="System.Drawing.Common" Version="8.0.8" />
-		<PackageReference Include="System.IO.Ports" Version="8.0.0" />
+		<PackageReference Include="log4net" Version="3.2.0" />
+		<PackageReference Include="System.Drawing.Common" Version="10.0.0-rc.1.25451.107" />
+		<PackageReference Include="System.IO.Ports" Version="10.0.0-rc.1.25451.107" />
 	</ItemGroup>
 
 	<ItemGroup>
